--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "dependencies": {
     "core-js": "^3.9.1",
@@ -15,6 +16,7 @@
   },
   "devDependencies": {
     "node-sass": "^5.0.0",
+    "push-dir": "^0.4.1",
     "sass-loader": "^10.1.0"
   }
 }
